# TheWall

./: .ammanrc.js  .gitignore  Anchor.toml  NOTES.md  README.md  package-lock.json  package.json
app/client/: client.ts
app/thewall/: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
app/thewall/anchor/: Anchor.toml  package.json
app/thewall/anchor.bak/programs/counter/src/: lib.rs
app/thewall/anchor.bak/programs/wall4/: Cargo.toml
app/thewall/anchor.bak/programs/wall4/src/: lib.rs.bak
app/thewall/anchor.bak/src/: counter-exports.ts
app/thewall/anchor/programs/counter/src/: lib.rs
app/thewall/anchor/programs/wall4/src/: lib.rs
app/thewall/anchor/src/: counter-exports.ts
app/thewall/anchor/tests/: wall4.ts  wall4.ts.bak
app/thewall/web/app/: layout.tsx
app/thewall/web/app/wall-list/: page.tsx
app/thewall/web/components/counter/: counter-data-access.tsx
app/thewall/web/components/ui/: ui-layout.tsx
app/thewall/web/components/wall-list/: wall-list-data-access.tsx  wall-list-feature.tsx  wall-list-ui.tsx
data/: metadata.json
data/brick/: metadata.json
programs/wall4/: Cargo.toml
programs/wall4/src/: lib.rs
tests/: wall4.ts
